Models Updated and Folder Structure Updated

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,8 @@ PORT=5000
 #DATABASE SETUP
 DB_USER=apexdev
 DB_PASSWORD=temppass
-DB_URL = mongodb+srv://apexdev:temppass@apexcluster.oxekarx.mongodb.net/?retryWrites=true&w=majority
+DB_URL = mongodb+srv://apexdevs:3rka5Hu3R0s6bPvk@apexdevscluster.iqzgvvm.mongodb.net/apexdevs?retryWrites=true&w=majority
+
 
 JWT_SECRET_KEY=secret_key
 
