--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "axios": "^1.6.7",
+    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "jsonwebtoken": "^9.0.2",
